# athina-evals

./: .gitignore  README.md  eval_suite_example.ipynb  example.ipynb  pyproject.toml  single_run_example.ipynb  test.ipynb
.github/workflows/: linter.yml  mypy_linter.yml  pyflakes_and_flake8_and_compileall_linter.py.yml  python-publish.yml
athina/: __init__.py
athina/benchmark/: eval_performance_calculator.py
athina/cli/: cli.py
athina/constants/: messages.py
athina/datasets/: __init__.py  compare_data.json  conversations.json  dataset.py  dataset_1.py  dataset_2.py  summarization_sample.py  yc_query_mini.py
athina/errors/: exceptions.py  messages.py
athina/evals/: __init__.py  base_evaluator.py  eval_type.py
athina/evals/conversation/conversation_coherence/: evaluator.py  prompt.py
athina/evals/conversation/conversation_resolution/: evaluator.py  prompt.py
athina/evals/function/: function_evaluator.py  functions.py  similarity.py  wrapper.py
athina/evals/grounded/: grounded_evaluator.py  similarity.py  wrapper.py
athina/evals/llm/: api_evaluator.py  base_llm_evaluator.py  eval_type.py  example.py  llm_evaluator.py
athina/evals/ragas/: ragas_evaluator.py
athina/guard/: exception.py  guard.py
athina/helpers/: __init__.py  athina_logging_helper.py  config.py  constants.py  dataset_helper.py  eval_helper.py  function_eval_util.py  get_evaluator.py  jinja_helper.py  json.py  kwparser.py  loader_helper.py  package_helper.py  run_helper.py  step_helper.py  type_check_helper.py
athina/interfaces/: athina.py  custom_model_config.py  data.py  eval_type.py  metric.py  model.py  openai.py  result.py
athina/keys/: athina_api_key.py
athina/llms/: abstract_llm_service.py  litellm_service.py  openai_service.py  question_answerer.py  question_answerer_bulk.py  question_answerer_cot.py  question_answerer_with_retrieval.py  question_generator.py
athina/loaders/: __init__.py  base_loader.py  conversation_loader.py  function_loader.py  json_loader.py  loader.py  rag_loader.py  ragas_loader.py  response_loader.py  summary_loader.py  text_loader.py
athina/metrics/: agreement_score.py  contradiction_score.py  groundedness.py  hallucination_score.py  metric.py  metric_type.py  passed.py  ragas_answer_relevancy.py  ragas_context_relevancy.py  ragas_metric.py  similarity_score.py
athina/runner/: run.py  run_wrapper.py
athina/scripts/: guardrails.py
athina/services/: athina_api_service.py
athina/steps/: __init__.py  api.py  base.py  browser_use_step.py  chain.py  chroma_retrieval.py  classify_text.py  code_execution.py  code_execution_v2.py  conditional.py  extract_entities.py  extract_json_path.py  iterator.py  llm.py  loop.py  open_ai_assistant.py  parse_document.py  pinecone.py  pinecone_retrieval.py  qdrant_retrieval.py  research_agent_step.py  search.py  spider_crawl.py  tool_call_agent.py  transcribe_speech_to_text.py  transform.py  weaviate_retrieval.py
athina/steps/utils/: metadata.py
athina_evals/evals/: __init__.py
athina_evals/evals/llm/: base_llm_evaluator.py
athina_evals/evaluators/llm/: base_llm_evaluator.py
athina_evals/helpers/: logger.py
athina_evals/interfaces/: model.py  result.py
athina_evals/keys/: __init__.py  openai_api_key.py
athina_evals/llms/: openai_llm_service.py  openai_service.py
examples/: chain.ipynb  conditional_flow.ipynb  conversation_coherence.ipynb  conversation_eval.ipynb  conversation_resolution.ipynb  custom_eval.ipynb  custom_grading_criteria.ipynb  dataset_creation.ipynb  eval_suite.ipynb  execute_node.ipynb  groundedness.ipynb  guard.ipynb  guardrails.ipynb  langchain_tracing.ipynb  load_athina_data.ipynb  question_answerer.ipynb  ragas.ipynb  run_batch.ipynb  run_custom_eval.ipynb  run_eval.ipynb  run_eval_llama_index.ipynb  run_eval_suite.ipynb  run_experiment.ipynb  run_function_eval.ipynb  run_function_eval.py  run_one.ipynb  run_single_datapoint.ipynb  text_summarization.ipynb
(+56 files in other folders)
