[tool.poetry]
name = "athina"
version = "1.2.8"
description = "Python SDK to configure and run evaluations for your LLM-based application"
authors = ["Shiv Sakhuja <shiv@athina.ai>", "Akshat Gupta <akshat@athina.ai>", "Vivek Aditya <vivek@athina.ai>", "Akhil Bisht <akhil@athina.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
retrying = "^1.3.4"
timeout-decorator = "^0.5.0"
openai = "^1.3.4"
colorlog = "^6.7.0"
pyyaml = "^6.0.1"
ragas = "^0.0.22"
pandas = "*"
langchain = ">=0.0.350"
datasets = "^2.16.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
langchain-openai = "^0.0.3"
llama-index = "^0.9.40"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "athina/**/*"

[tool.poetry.scripts]
athina = "athina.cli.cli:main"
install_guardrails = "athina.scripts.guardrails:install"
