[tool.poetry]
name = "athina"
version = "1.6.33"
description = "Python SDK to configure and run evaluations for your LLM-based application"
authors = ["Shiv Sakhuja <shiv@athina.ai>", "Akshat Gupta <akshat@athina.ai>", "Vivek Aditya <vivek@athina.ai>", "Akhil Bisht <akhil@athina.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
retrying = "^1.3.4"
timeout-decorator = "^0.5.0"
tiktoken = "^0.8.0"
openai = "^1.3.4"
colorlog = "^6.7.0"
pyyaml = "^6.0.1"
ragas = "^0.0.22"
pandas = "*"
langchain = ">=0.0.350"
datasets = "^2.16.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
langchain-openai = "^0.0.8"
llama-index = "^0.9.40"
litellm = "1.54.1"
jinja2 = "^3.1.4"
pinecone-client = "^4.1.0"
qdrant-client = "^1.9.1"
marvin = "^2.3.4"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
pydantic_core = "^2.16.3"
tokenizers = ">=0.19,<0.20"
jsonschema = "^4.22.0"
jsonpath-ng = "^1.6.0"
RestrictedPython = "^7.1"
bandit = "^1.7.8"
weaviate-client = "^4.7.1"
editdistance = "^0.8.1"
textdistance = "^4.6.3"
textstat = "^0.7.4"
chromadb-client = "^0.5.20"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "athina/**/*"

[tool.poetry.scripts]
athina = "athina.cli.cli:main"
install_guardrails = "athina.scripts.guardrails:install"
